
* Fix bug where it writes a plain text error message to stdout, invalidating output formats.

  Closes #6597

* ``is_class_subscriptable_pep585_with_postponed_evaluation_enabled`` has been deprecated.
  Use ``subscriptable_with_postponed_evaluation_enabled`` instead.

  Ref #6536

* Update ranges for ``using-constant-test`` and ``missing-parentheses-for-call-in-test``
  error messages.

..
  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.13.9?
============================
Release date: 2022-05-13


* Respect ignore configuration options with ``--recursive=y``.

  Closes #6471

* Fix false positives for ``no-name-in-module`` and ``import-error`` for ``numpy.distutils`` and ``pydantic``.

  Closes #6497

* Fix ``IndexError`` crash in ``uninferable_final_decorators`` method.

 Relates to #6531

* Fix a crash in ``unnecessary-dict-index-lookup`` when subscripting an attribute.

  Closes #6557

* Fix a crash when accessing ``__code__`` and assigning it to a variable.

  Closes #6539

* Fix a false positive for ``undefined-loop-variable`` when using ``enumerate()``.

  Closes #6593


What's New in Pylint 2.13.8?
============================
Release date: 2022-05-02

* Fix a false positive for ``undefined-loop-variable`` for a variable used in a lambda
  inside the first of multiple loops.

  Closes #6419

* Fix a crash when linting a file that passes an integer ``mode=`` to
  ``open``

  Closes #6414

* Avoid reporting ``superfluous-parens`` on expressions using the ``is not`` operator.

  Closes #5930

* Fix a false positive for ``undefined-loop-variable`` when the ``else`` of a ``for``
  loop raises or returns.

  Closes #5971

* Fix false positive for ``unused-variable`` for classes inside functions
  and where a metaclass is provided via a call.

  Closes #4020

* Fix false positive for ``unsubscriptable-object`` in Python 3.8 and below for
  statements guarded by ``if TYPE_CHECKING``.
